Fixed host and digests